syntax = "proto3";

// Package option
option go_package = "github.com/topten1222/hello_sekai";

// Messages
message AccessTokenSearchReq {
    string accessToken = 1;
}

message AccessTokenSearchRes {
    bool inValid = 1;
}

message RoleCountReq {}

message RoleCountRes {
    int64 count = 1;
}

// Service Definition
service AuthGrpcService {
    rpc CredentialSearch(AccessTokenSearchReq) returns (AccessTokenSearchRes);
    rpc RolesCount(RoleCountReq) returns (RoleCountRes);
}